--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,15 @@
 spring.application.name=healthcare
 
 # Postgres Configuration
+
 spring.datasource.url=${DB_URL}
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
+
+#spring.datasource.url=${DB_LOCAL_URL}
+#spring.datasource.username=${DB_LOCAL_USERNAME}
+#spring.datasource.password=${DB_LOCAL_PASSWORD}
+
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # Hibernate Configuration
@@ -12,6 +18,8 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
 # Email Configuration
 spring.mail.host=smtp.gmail.com
@@ -24,3 +32,7 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 # Admin Config (used in code)
 admin.default.email=${ADMIN_EMAIL}
 admin.default.password=${ADMIN_PASSWORD}
+
+# Document max size
+spring.servlet.multipart.max-file-size=50MB
+spring.servlet.multipart.max-request-size=50MB
