Neon postgres migration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,13 +3,17 @@ spring.application.name=healthcare
 
 # Postgres Configuration
 
-spring.datasource.url=${DB_URL}
-spring.datasource.username=${DB_USERNAME}
-spring.datasource.password=${DB_PASSWORD}
+#spring.datasource.url=${DB_URL}
+#spring.datasource.username=${DB_USERNAME}
+#spring.datasource.password=${DB_PASSWORD}
 
 #spring.datasource.url=${DB_LOCAL_URL}
 #spring.datasource.username=${DB_LOCAL_USERNAME}
 #spring.datasource.password=${DB_LOCAL_PASSWORD}
+
+spring.datasource.url=${DB_NEON_URL}
+spring.datasource.username=${DB_NEON_USERNAME}
+spring.datasource.password=${DB_NEON_PASSWORD}
 
 spring.datasource.driver-class-name=org.postgresql.Driver
 
