Update doctor done

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -38,5 +38,6 @@ admin.default.email=${ADMIN_EMAIL}
 admin.default.password=${ADMIN_PASSWORD}
 
 # Document max size
+spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=50MB
 spring.servlet.multipart.max-request-size=50MB
