--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -41,3 +41,8 @@ admin.default.password=${ADMIN_PASSWORD}
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=50MB
 spring.servlet.multipart.max-request-size=50MB
+
+zoom.account.id=ZOOM_ACCOUNT_ID
+zoom.client.id=ZOOM_CLIENT_ID
+zoom.client.secret=ZOOM_CLIENT_SECRET
+zoom.base.url=https://api.zoom.us/v2
